--- a/README.org
+++ b/README.org
@@ -57,6 +57,9 @@ its content.
 
 ** Enero 2024
 
+*** 03-Ene-24
++ [[https://bit.ly/4aK0e6O][A computer-checked proof of the Four Color Theorem]]. ~ Georges Gonthier. #ITP #Coq #Math
+
 *** 02-Ene-24
 + [[https://bit.ly/3NPy80h][A parametricity-based formalization of semi-simplicial and semi-cubical sets]]. ~ Hugo Herbelin, Ramkumar Ramachandra. #ITP #Coq #Math
 + [[https://bit.ly/3H1qV9N][Is mathematics obsolete?]] ~ Jeremy Avigad. #Math #AI #MachineLearning
