--- a/README.org
+++ b/README.org
@@ -57,6 +57,9 @@ its content.
 
 ** Enero 2024
 
+*** 06-Ene-24
++ [[https://odr.chalmers.se/server/api/core/bitstreams/774ba4a2-58b4-407f-aa6b-b0209b6c7d70/content][Polynomial functors in Agda: Theory and Practice (A formalization and collection of applications of categories of polynomial functors)]]. ~ André Muricy Santos Marcus Jörgensson. #ITP #Agda #FunctionalProgramming
+
 *** 04-Ene-24
 + [[https://bit.ly/3S6l4Gv][Formal verification of an UAV autopilot: Static analysis and verified code generation]]. ~ Baptiste Pollien. #ITP #Coq
 + [[https://bit.ly/3NPVzqj][What are non-classical logics and why do we need them? An extended interview with Dov Gabbay and Leon van der Torre]]. #Logic #AI
