--- a/README.org
+++ b/README.org
@@ -57,6 +57,12 @@ its content.
 
 ** Enero 2024
 
+*** 08-Ene-24
++ [[https://hosting.cs.vt.edu/seminar/DL_series_2010-2011/Moshe_Vardi/logic.pdf][From Aristotle to Pentium]]. ~ Moshe Y. Vardi. #Logic #CompSci
++ [[https://youtu.be/lZ6zHma7Rj0][Simplicial homotopies in Lean]]. ~ Jack McKoen. #ITP #LeanProver #Math
++ [[https://youtu.be/eY0TvP8tyD4][Towards a completeness proof of hybrid modal logic in Lean]]. ~ Alex Oltean. #ITP #LeanProver #Logic
++ [[https://www.qeios.com/read/9FH6AD][Limitations of and lessons from the learning of large language models]]. ~ Reinhard Oldenburg. #LLMs
+
 *** 07-Ene-24
 + [[https://youtu.be/e51SHLZQtws][Autoformalization via Grammatical Framework]]. ~ Shashank Pathak. #Autoformalization #LeanProver
 
