--- a/README.org
+++ b/README.org
@@ -57,6 +57,11 @@ its content.
 
 ** Enero 2024
 
+*** 16-Ene-24
++ [[https://www.philipzucker.com/harrison-handbook-in-python-pt-i/][Harrison handbook in Python pt 1]]. ~ Philip Zucker (@SandMouth). #Logic #ATP #Phython
++ [[https://proofassistants.stackexchange.com/questions/43/proof-assistants-for-beginners-a-comparison][Proof assistants for beginners - a comparison]]. #ITP #Coq #LeanProver
++ [[https://www.ox.ac.uk/students/academic/guidance/skills/ai-study][Use of generative AI tools to support learning | University of Oxford]]. #GenerativeAI #Education
+
 *** 14-Ene-24
 + [[https://dl.acm.org/doi/pdf/10.1145/3636501.3636949][Certification of confluence- and commutation-proofs via parallel critical pairs]]. ~ Nao Hirokawa, Dohan Kim, Kiraku Shintani & René Thiemann. #ITP #IsabelleHOL
 + [[https://dl.acm.org/doi/pdf/10.1145/3636501.3636945][Formalizing the ∞-categorical Yoneda lemma]]. ~ Nikolai Kudasov, Emily Riehl & Jonathan Weinberger. #ITP #Coq
